tests/ui/issues/issue-35139.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-35139.rs:9:6
   |
LL | impl<'a> MethodType for MTFn {
   |      ^^ unconstrained lifetime parameter
   |
help: make use of the lifetime parameter `'a` in the `self` type
   |
LL | impl<'a> MethodType for MTFn<'a> {
   |                             ++++
help: and add it to the struct definition of MTFn as well since it's used in the body of the impl
   |
LL | pub struct MTFn<'a>;
   |                ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
